openmetadata-ui/src/main/resources/ui/src/components/Entity/EntityHeaderTitle/entity-header-title.less
/*
 *  Copyright 2024 Collate.
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *  http://www.apache.org/licenses/LICENSE-2.0
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */
@import (reference) '../../../styles/variables.less';

.entity-header-title {
  flex: 1;
  .ant-typography-ellipsis.entity-header-name {
    margin-bottom: 0px;
    display: block;
    color: @grey-900;
    min-width: 0;
  }
  .ant-typography-ellipsis.entity-header-display-name {
    font-size: 16px;
    color: @grey-700;
  }
}

// Opt-in modifier: lets a header title wrap onto multiple lines instead of
// truncating with an ellipsis. Overrides antd's single-line ellipsis so a long
// name stays fully visible within a width-capped container. Only active when a
// consumer passes `entity-header-title-wrap` via nameClassName/displayNameClassName.
.entity-header-title-wrap.ant-typography {
  white-space: normal !important;
  overflow: visible !important;
  text-overflow: clip !important;
  word-break: break-word;
}

// When the title wraps onto multiple lines, top-align the icon with the first
// line instead of centering it against the full (tall) title block.
.entity-header-title-top .entity-header-title {
  align-items: flex-start;
}

.ant-btn.entity-follow-button {
  border-radius: 16px;
  background-color: @primary-button-background;
  padding: 4px 12px;
  border: none;
  width: fit-content;
  height: auto;
  .ant-typography {
    color: @primary-heading-color;
    font-weight: @font-medium;
  }
  span.anticon {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  svg {
    // to make follow button icon color same as primary color
    color: @primary-color;
  }
  span.ant-typography {
    margin-left: 0px;
  }

  &:hover {
    background-color: @primary-button-background;
  }
  &:active {
    background-color: @primary-button-background;
  }
  &:focus {
    background-color: @primary-button-background;
  }
}

.ant-btn.copy-button {
  border-radius: 6px;
  border: 1px solid @border-light;
  background: @background-color;
  color: @background-color;
  width: 22px;
  height: 22px;
  &:hover {
    background-color: @background-color;
    color: @background-color;
  }
  &:active {
    background-color: @background-color;
    color: @background-color;
  }
  &:focus {
    background-color: @background-color;
    color: @background-color;
  }
}

